<resources>
    <string name="app_name">Fitpeo</string>
    <string name="pass_details">Pass details</string>
    <string name="offices">Offices</string>
    <string name="location">Location</string>
    <string name="desk">Desk</string>
    <string name="view_on_map">View on map</string>
    <string name="schedule">Schedule</string>
    <string name="select_day">Select day</string>
    <string name="fetching_location">Fetching Location…</string>
</resources>